--- a/public/books/filosofskyi_kamen/part1/index.html
+++ b/public/books/filosofskyi_kamen/part1/index.html
@@ -1063,13 +1063,13 @@
         <span class="page-num">СТР 170</span>
         Говорят, что он всегда и во всем на их стороне, выгораживает их перед остальными преподавателями и ставит им лучшие отметки.
         <span class="explanation">
-          Это от Снэгге и его любимых слизеринцах.
+          Это от Снегге и его любимых слизеринцах.
         </span>
       </p>
     </div>
     <div class="column column-60">
       <p class="bad">
-        В любом нормальном учебном заведении (а Хогвартс явно позиционируется как престижная школа) неадеквата Снегга давным-давно уволили бы. Далее мы узнаём, что Дамблдор ему очень благодарен, но это не значит, что Снегга можно допускать до работы с детьми. Пусть бы сидел в своём подземелье и варил зелья в гордом одиночестве, ненавидя весь мир. Впрочем, о Снэгге мы вспомним ещё не раз.
+        В любом нормальном учебном заведении (а Хогвартс явно позиционируется как престижная школа) неадеквата Снегга давным-давно уволили бы. Далее мы узнаём, что Дамблдор ему очень благодарен, но это не значит, что Снегга можно допускать до работы с детьми. Пусть бы сидел в своём подземелье и варил зелья в гордом одиночестве, ненавидя весь мир. Впрочем, о Снегге мы вспомним ещё не раз.
       </p>
     </div>
   </section>
@@ -1079,13 +1079,13 @@
         <span class="page-num">СТР 173</span>
         — Поттер! — неожиданно произнес Снегг. — Что получится, если я смешаю измельченный корень асфоделя с настойкой полыни?
         <span class="explanation">
-          Это первый урок у Снэгга.
+          Это первый урок у Снегга.
         </span>
       </p>
     </div>
     <div class="column column-60">
       <p class="bad">
-        Снэгг ведёт себя не как взрослый мужчина, а как весьма недалёкий ребёнок. Причём большую часть всей истории. Он действительно думал, что Поттер ответит на этот вопрос? Что любой другой первокурсник, впервые пришедший на урок, сможет ответить? Обычно подобные "преподаватели" намертво отбивают всякую охоту у детей изучать предмет. А иногда и изучать вообще что бы то ни было.
+        Снегг ведёт себя не как взрослый мужчина, а как весьма недалёкий ребёнок. Причём большую часть всей истории. Он действительно думал, что Поттер ответит на этот вопрос? Что любой другой первокурсник, впервые пришедший на урок, сможет ответить? Обычно подобные "преподаватели" намертво отбивают всякую охоту у детей изучать предмет. А иногда и изучать вообще что бы то ни было.
       </p>
     </div>
   </section>
@@ -1095,7 +1095,7 @@
         <span class="page-num">СТР 174</span>
         — Похоже, вам и в голову не пришло почитать учебники, прежде чем приехать в школу, так, Поттер?
         <span class="explanation">
-          И вновь Снэгг.
+          И вновь Снегг.
         </span>
       </p>
     </div>
@@ -1111,7 +1111,7 @@
         <span class="page-num">СТР 176</span>
         — Идиот! — прорычал Снегг [...] — Как я понимаю, прежде чем снять котел с огня, вы добавили в зелье иглы дикобраза?
         <span class="explanation">
-          Снэгг распекает ученика, который зафейлил зелье и травмировался.
+          Снегг распекает ученика, который зафейлил зелье и травмировался.
         </span>
       </p>
     </div>
@@ -1127,13 +1127,13 @@
         <span class="page-num">СТР 176</span>
         Из-за вас я записываю еще одно штрафное очко на счет Гриффиндора.
         <span class="explanation">
-          Снэгг штрафует Гриффиндор по беспределу.
+          Снегг штрафует Гриффиндор по беспределу.
         </span>
       </p>
     </div>
     <div class="column column-60">
       <p class="bad">
-        Подобные вещи Снэгг будет практиковать семь лет. Это может работать с первокурсниками, но более старшие ученики просто будут забрасывать директора (а может быть, и совет попечителей) коллективными жалобами на мудацкого препода. Никто не стал бы терпеть его столько лет, как уже упоминалось выше. В школе не может, просто не может, преподавать человек, который выплёскивает свое мудачество на детей, и при этом чувствует себя абсолютно безнаказанным. Вообще корень многих правонарушений лежит как раз в безнаказанности. Сначала ты обругал ученика, потом обозвал дураком, потом начал грозить расправой, а в результате превратится в деспота &mdash; причём, все эти стадии Снэгг благополучно пройдёт. Если преподаватель знает, что ему дадут по шапке за неподобающее поведение, то в большинстве случаев ничего подобного не случится. И весь этот беспредел не очень вяжется с тем, что в последней книге Снэгг оказывается непризнанным героем, великим храбрецом, комсомольцем и просто красавцем.
+        Подобные вещи Снегг будет практиковать семь лет. Это может работать с первокурсниками, но более старшие ученики просто будут забрасывать директора (а может быть, и совет попечителей) коллективными жалобами на мудацкого препода. Никто не стал бы терпеть его столько лет, как уже упоминалось выше. В школе не может, просто не может, преподавать человек, который выплёскивает свое мудачество на детей, и при этом чувствует себя абсолютно безнаказанным. Вообще корень многих правонарушений лежит как раз в безнаказанности. Сначала ты обругал ученика, потом обозвал дураком, потом начал грозить расправой, а в результате превратится в деспота &mdash; причём, все эти стадии Снегг благополучно пройдёт. Если преподаватель знает, что ему дадут по шапке за неподобающее поведение, то в большинстве случаев ничего подобного не случится. И весь этот беспредел не очень вяжется с тем, что в последней книге Снегг оказывается непризнанным героем, великим храбрецом, комсомольцем и просто красавцем.
       </p>
     </div>
   </section>
