--- a/public/books/filosofskyi_kamen/part1/index.html
+++ b/public/books/filosofskyi_kamen/part1/index.html
@@ -370,7 +370,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        К сожалению, у змей нет век, подмигивать они не могут.
+        К сожалению, у змей нет век в привычном нам смысле этого слова. Их глаза закрывает специальная прозрачная плёнка, из-за чего у них мутноватый и "гипнотический взгляд". Эта плёнка и представляет собой некие "сросшиеся веки", поэтому подмигивать они не могут.
       </p>
     </div>
   </section>
@@ -386,7 +386,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Змея, видимо, хочет реализовать мечту великого комбинатора и отправиться в Рио. Но, к сожалению, весьма маловероятно, что удав туда доползёт. Дело всё-таки в Англии происходит.
+        Змея, видимо, хочет реализовать мечту великого комбинатора и отправиться в Рио. Но, к сожалению, весьма маловероятно, что удав туда доползёт. Дело всё-таки в Англии происходит, где климатические условия для него неидеальные (неспроста змеям в вольеры зачастую ставят специальный подогрев).
       </p>
     </div>
   </section>
