--- a/public/books/kubok_ognya/part2/index.html
+++ b/public/books/kubok_ognya/part2/index.html
@@ -1920,6 +1920,24 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-457-1-5">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 457</span>
+        &mdash; Мисс Флёр Делакур продемонстрировала замечательное владение заклинанием головного пузыря [...] Мистер Седрик Диггори также использовал заклинание головного пузыря и первым вернулся со своим пленником, но вернулся на минуту позже установленного времени [...]
+        <span class="explanation">
+          С помощью этого заклинания Флёр и Седрик дышали под водой. Внимание на это обратил один из наших читателей.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Вообще, дыхание под водой с помощью некоего головного пузыря звучит несколько странно, если он просто окутывает голову и сохраняет некоторое количество воздуха, а не даёт пловцу какого-нибудь диффузионного дыхания или что-то вроде того. Вспомним курс школьной математики и подсчитаем примерный объём такого шара в литрах, если предположить, что его радиус вряд ли больше 30 сантиметров. Объём такого шара составит 113 литров (если же радиус увеличить до 50 сантиметров, то примерно 523 литра). Казалось бы, не так мало.<br><br>
+        Проблема, однако, в том, что человек даже в обычных условиях в состоянии спокойствия при давлении 1 бар (то есть нормальное атмосферное давление на поверхности) потребляет 10-20 литров воздуха в минуту. Иными словами, даже воздуха в гигантском шаре на 523 литра хватило бы в самом лучшем случае на 52 минуты, а участники соревнования проторчали под водой чуть больше часа, так как Седрик, по словам судей, приплыл на минуту позже. Но и это ещё не всё: на глубине 20 метров давление будет уже примерно 3 бара и потому потребление воздуха увеличится втрое до 30-60 литров, и это в спокойном состоянии. При испуге или стрессе это потребление может вырасти раза в два-три, поэтому в реальности старина Седрик задохнулся бы минут через 30 в самом лучшем случае.<br><br>
+        У кого-то может возникнуть вопрос, как же тогда аквалангисты могут находиться под водой долгое время с не слишком большими баллонами? Ответ очень простой: газ в этих баллонах сильно сжат, поэтому в совсем маленький баллон на 3 литра может влезть аж 900 литров воздуха под давлением 300 бар. А вообще обычно с собой берут баллоны от 12 литров, в которые входит две с лишним тысячи литров. Понятное дело, что сжимать воздух в самом головном пузыре &mdash; это самоубийство. Кроме того, есть подозрение, что этот пузырь будет немного тянуть пловца на поверхность, то есть с собой придётся брать какие-то утяжеления, как это делают аквалангисты.
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-457-2">
     <div class="column">
       <p class="text">
