--- a/public/books/filosofskyi_kamen/part1/index.html
+++ b/public/books/filosofskyi_kamen/part1/index.html
@@ -761,7 +761,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        И зачем тогда его назначать преподавателем этого предмета? Чему научит препод по защите от тёмных искусств, если он сам боится этих искусств?
+        И зачем тогда его назначать преподавателем этого предмета? Чему научит препод по защите от тёмных искусств, если он сам боится этих искусств? Понятно, что Квиррелл просто играет роль, но делает он это как-то слишком неумело и глупо. Его могут просто счесть за душевнобольного (иначе почему он так странно переменился за совсем короткое время?) и от греха подальше уволить.
       </p>
     </div>
   </section>
@@ -777,7 +777,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Как родители Гарри умудрились накопить столько денег? Судя по всему, они были совсем молодыми людьми, когда погибли. Больше того, в последней книге мы узнаем точную дату их смерти и можем легко подсчитать, что Лили и Джеймсу было чуть больше двадцати лет. Или это такое семейное богатство? Но ведь мать Поттера вообще была из семьи маглов, которые никакого золота, естественно, не копили. К сожалению, об этом нам ничего рассказывают.
+        Как родители Гарри умудрились накопить столько денег? Судя по всему, они были совсем молодыми людьми, когда погибли. Больше того, в последней книге мы узнаем точную дату их смерти и можем легко подсчитать, что Лили и Джеймсу было чуть больше двадцати лет. Или это такое семейное богатство? Но ведь мать Поттера вообще была из семьи маглов, которые никакого золота, естественно, не копили. К сожалению, об этом нам ничего не рассказывают.
       </p>
     </div>
   </section>
@@ -873,7 +873,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Вообще-то, нормальные люди такие книги не издавали бы. Это равносильно продаже книги "как сделать бомбу и правильно заложить её в метро". Гарри, конечно же, сразу думает, как бы наслать проклятие на Дадли. Ну, а более решительные личности не будут думать, а просто сделают. Вообще, если честно, несколько странно, что маги давным-давно не подчинили магглов, особенно учитывая замашки всяких Малфоев. И ещё: детям-магам нужно с раннего детства вдалбливать, что чем больше сила, тем больше и ответственность, так как многие, очевидно, этого не понимают.
+        Вообще-то, нормальные люди такие книги не издавали бы. Это равносильно продаже книги "как сделать бомбу и правильно заложить её в метро". Гарри, конечно же, сразу думает, как бы наслать проклятие на Дадли. Ну, а менее склонные к рефлексии личности не будут думать, а просто сделают. Вообще, если честно, несколько странно, что маги давным-давно не подчинили магглов, особенно учитывая замашки всяких Малфоев. И ещё: детям-магам нужно с раннего детства вдалбливать, что чем больше сила, тем больше и ответственность, так как многие, очевидно, этого не понимают.
       </p>
     </div>
   </section>
@@ -1196,6 +1196,22 @@
     </div>
   </section>
   <h2 id="chapter-7" class="mt-1 chapter-title">Глава 7</h2>
+  <section class="row" id="page-153">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 153</span>
+        [...] последняя в списке Блейз Цабини уже направлялась к столу Слизерина.
+        <span class="explanation">
+          Распределение заканчивается.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="comment">
+        Видимо, ошибка перевода, так как в дальнейшем выясняется, что корнет &mdash; вовсе не женщина.
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-159">
     <div class="column">
       <p class="text">
@@ -1309,7 +1325,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Не очень ясен практический смысл этого предмета. Ну, некоторые трансформации могут быть полезны (сделать маленькое большим для удобства переноски), но превращать стол в свинью &mdash; странно. А этот предмет, на минуточку, изучают все семь лет. Интересно, а они там превращают ворона в конторку? Ну, и ещё: а эту свинью можно зажарить и съесть? Просто таким макаром проблема голода решается элементарно: можно всякий мусор превращать в качественную еду.
+        Не очень ясен практический смысл этого предмета. Ну, некоторые трансформации могут быть полезны (сделать большое маленьким для удобства переноски), но превращать стол в свинью &mdash; странно. А этот предмет, на минуточку, изучают все семь лет. Интересно, а они там превращают ворона в конторку? Ну, и ещё: а эту свинью можно зажарить и съесть? Просто таким макаром проблема голода решается элементарно: можно всякий мусор превращать в качественную еду.
       </p>
     </div>
   </section>
