--- a/public/books/taynaya_komnata/part1/index.html
+++ b/public/books/taynaya_komnata/part1/index.html
@@ -294,6 +294,19 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-5">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 5</span>
+        [...] закончив первый курс Школы чародейства и волшебства «Хогвартс», что на волшебном языке значит «вепрь» [...]
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="comment">
+        На каком ещё волшебном языке? "Hog" &mdash; это и на обычном английском значит "свинья", а "wart" &mdash; что-то типа "бородавки". Получается такая себе "свинья-бородавочник".
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-6">
     <div class="column">
       <p class="text">
@@ -543,7 +556,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        И правда, а где ты? Назвал какой-то "кокосой переулок", и порох на самом деле тебя куда-то отнёс, хотя, по идее, ничего просто не должно было случиться, так как на свете и места такого нет.
+        И правда, а где ты? Назвал какой-то "кокосой переулок", и порох на самом деле тебя куда-то отнёс, хотя, по идее, ничего просто не должно было случиться, так как на свете и места такого нет. И кстати: выходит, что волшебники могут телепортироваться вообще в любой камин, даже если хозяин их не ждёт? Ведь Гарри оказывается в магазине с не самой лучшей репутацией и его владелец вряд ли бы захотел, чтобы ему не голову сыпались всякие неизвестные личности.
       </p>
     </div>
   </section>
