--- a/public/books/filosofskyi_kamen/part1/index.html
+++ b/public/books/filosofskyi_kamen/part1/index.html
@@ -1057,7 +1057,7 @@
         <span class="page-num">СТР 127</span>
         Только не говори мне, что ты [Гарри] никогда не слышал о Дамблдоре!
         <span class="explanation">
-          Рон болает с Гарри.
+          Рон болтает с Гарри.
         </span>
       </p>
     </div>
@@ -1127,7 +1127,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Почему Гермиона не остановит Рона? Она ведь самая законопослушная ученица, и уже наверняка прочитала свод основных правил, которые полагается знать ученикам.
+        Почему Гермиона не остановит Рона? Она ведь самая законопослушная ученица и уже наверняка прочитала свод основных правил, которые полагается знать ученикам.
       </p>
     </div>
   </section>
