--- a/public/books/taynaya_komnata/part1/index.html
+++ b/public/books/taynaya_komnata/part1/index.html
@@ -274,7 +274,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Сова не должна жить в такой клетке, судя по описанию весьма небольшой (иначе Гарри никак не смог бы в одиночку таскать её вместе с другими вещами). Строго говоря, крупные совы в клетке жить не должны в принципе &mdash; это не лучшим образом отражается на их здоровье. Кто вообще придумал рекомендовать школьникам покупать себе сов? Это весьма специфичные животные, и для их правильного содержания нужны определённые знания.
+        Сова не должна жить в такой клетке, судя по описанию весьма небольшой (иначе Гарри никак не смог бы в одиночку таскать её вместе с другими вещами). Строго говоря, совы в клетке жить не должны в принципе &mdash; это не лучшим образом отражается на их здоровье. Кто вообще придумал рекомендовать школьникам покупать себе сов? Это весьма специфичные животные, и для их правильного содержания нужны определённые знания.
       </p>
     </div>
   </section>
