--- a/public/books/taynaya_komnata/part2/index.html
+++ b/public/books/taynaya_komnata/part2/index.html
@@ -399,7 +399,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        То есть о существовании этой комнаты вам прекрасно известно? Более того, в дальнейшем выяснится, что её уже открывали всего несколько десятилетий назад и погиб кто-то из учеников. Вместо того, чтобы по камешку разобрать замок и найти эту несчастную комнату, вы играете в молчанку и позволяете приезжать сюда ученикам? Когда в этой комнате торчит смертельно опасный монстр, который может вылезти в любой момент?
+        То есть о существовании этой комнаты вам прекрасно известно? Более того, в дальнейшем выяснится, что её уже открывали всего несколько десятилетий назад и погиб кто-то из учеников. Вместо того, чтобы по камешку разобрать замок и найти эту несчастную комнату, вы играете в молчанку и позволяете приезжать сюда ученикам? Когда в этой комнате торчит смертельно опасный монстр, который может вылезти в любой момент? И почему тогда об этом факте никто не знает, если информация явно просочилась наружу?
       </p>
     </div>
   </section>
@@ -417,6 +417,19 @@
     <div class="column column-60">
       <p class="bad">
         Да тут давным-давно нужно эвакуировать учеников. Директор прекрасно осведомлён, что это не байки и опасность вполне реальна. Пока никто не погиб только чудом.
+      </p>
+    </div>
+  </section>
+  <section class="row" id="page-257">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 257</span>
+        &mdash; Да, но первый [первой жертвой] был Филч, &mdash; дрожал от страха Невилл. &mdash; А ведь все знают, что я тоже почти сквиб.
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Это называется "натягивать сову на глобус". Первой жертвой был не Филч, а его кошка. Если бы зверь Слизерина реально нападал бы только на всяких грязнокровок, то он и подкараулил бы самого Филча, а не кошку, а которая вообще здесь никаким боком.
       </p>
     </div>
   </section>
@@ -577,7 +590,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Ага, если ненавидишь тех маглов, с которыми живёшь, то, ясен пень, ненавидишь вообще все маглов и полукровок. Именно поэтому Поттер и с Гермионой дружит &mdash; чтобы скрытно ненавидеть.
+        Ага, если ненавидишь тех маглов, с которыми живёшь, то, ясен пень, ненавидишь вообще всех маглов и полукровок. Именно поэтому Поттер и с Гермионой дружит &mdash; чтобы скрытно ненавидеть.
       </p>
     </div>
   </section>
@@ -594,7 +607,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Почему? Ты прекрасно знаешь, что Дамблдор &mdash; один из самых искусных волшебников в мире. Если уж кто сможет что-то посоветовать, так только он. Нет, лучше продолжать играть в молчанку (в прошлой книге этим промышлял сам директор).
+        Почему? Ты прекрасно знаешь, что Дамблдор &mdash; один из самых искусных волшебников в мире. Если уж кто сможет что-то посоветовать, так только он. Нет, лучше продолжать играть в молчанку (в прошлой книге этим промышлял сам директор). Хотя Дамблдор и сам хорош: не мог он что ли всей школе объявить, что Поттер невиновен, чтобы от него не шарахались все?
       </p>
     </div>
   </section>
@@ -736,6 +749,22 @@
     <div class="column column-60">
       <p class="comment">
         Перси расправил плечи, значит... Ты сам-то веришь в то, что говоришь?
+      </p>
+    </div>
+  </section>
+  <section class="row" id="page-303">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 303</span>
+        &mdash; Вспомнил, «чистая кровь»!
+        <span class="explanation">
+          Пароль в гостиную Слизерина.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Это уже какой-то гротеск. В числе других паролей у них "Слава Волдеморту", "Смерть Дамблдору" и "Поттер &mdash; лох". Утро они начинают с двухминутки ненависти по отношению ко всем полукровкам, а ночью же студенты Слизерина приносят человеческие жертвы и устраивают оргии.
       </p>
     </div>
   </section>
@@ -914,6 +943,22 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-346">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 346</span>
+        Но единственным предметом, к которому у Гарри лежала душа, был квиддич. И он записался на те же курсы, что Рон [...]
+        <span class="explanation">
+          Выбирают предметы на следующий год.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Очень интересно. То есть у великого мага и волшебника, который впоследствии уделает дементоров, приспешников Волдеморта и самого Тёмного Лорда, у гениального наставника, который чуть ли не с 14 лет будет преподавать своим друзьям и они достигнут просто очешуительных успехов всего за месяц, не лежит душа <strong>вообще ни к одному предмету</strong>. Иными словами, его не интересует абсолютно ничего, кроме полётов на метле: ни заклинания, ни трансфигурация, ни защита от тёмных искусств (хотя тот жеКвиррелл, видимо, это предмет рассказывал вполне сносно). Это, скажет прямо, несколько необычно. В большинстве случаев детей интересует хоть что-то: кого-то привлекают компьютеры, кому-то нравится играть на музыкальном инструменте, кто-то рисует или пытается писать рассказы. А уж ко всяким магическим штукам дети вообще были бы неравнодушны наверняка, особенно если бы выросли в семье магглов.<br><br>Положа руку на сердце, Гарри и Рон &mdash; две бестолочи, которые не хотят делать даже минимально необходимый объём домашнего задания, постоянно списывая у Гермионы. Вместо того, чтобы посоветоваться со старшими и выбрать предметы по душе (можно было бы обратиться хотя бы к декану), они записываются по принципу "хоть что-нибудь". Хотя учителя тоже хороши: могли бы провести для учеников какую-нибудь консультацию по выбору предметов, раз это так важно.
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-348">
     <div class="column">
       <p class="text">
@@ -956,7 +1001,7 @@
         </span>
       </p>
     </div>
-    <div class="column column-60">
+    <div class="column column-60">т
       <p class="comment">
         Да с чего он этого себе в голову вообще вбил? Чем старосты отличаются от других учеников, кроме непомерного самомнения и значка на груди?
       </p>
