--- a/public/books/taynaya_komnata/part2/index.html
+++ b/public/books/taynaya_komnata/part2/index.html
@@ -955,7 +955,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Очень интересно. То есть у великого мага и волшебника, который впоследствии уделает дементоров, приспешников Волдеморта и самого Тёмного Лорда, у гениального наставника, который чуть ли не с 14 лет будет преподавать своим друзьям и они достигнут просто очешуительных успехов всего за месяц, не лежит душа <strong>вообще ни к одному предмету</strong>. Иными словами, его не интересует абсолютно ничего, кроме полётов на метле: ни заклинания, ни трансфигурация, ни защита от тёмных искусств (хотя тот жеКвиррелл, видимо, это предмет рассказывал вполне сносно). Это, скажет прямо, несколько необычно. В большинстве случаев детей интересует хоть что-то: кого-то привлекают компьютеры, кому-то нравится играть на музыкальном инструменте, кто-то рисует или пытается писать рассказы. А уж ко всяким магическим штукам дети вообще были бы неравнодушны наверняка, особенно если бы выросли в семье магглов.<br><br>Положа руку на сердце, Гарри и Рон &mdash; две бестолочи, которые не хотят делать даже минимально необходимый объём домашнего задания, постоянно списывая у Гермионы. Вместо того, чтобы посоветоваться со старшими и выбрать предметы по душе (можно было бы обратиться хотя бы к декану), они записываются по принципу "хоть что-нибудь". Хотя учителя тоже хороши: могли бы провести для учеников какую-нибудь консультацию по выбору предметов, раз это так важно.
+        Очень интересно. То есть у великого мага и волшебника, который впоследствии уделает дементоров, приспешников Волдеморта и самого Тёмного Лорда, у гениального наставника, который чуть ли не с 14 лет будет преподавать своим друзьям и они достигнут просто очешуительных успехов всего за месяц, не лежит душа <strong>вообще ни к одному предмету</strong>. Иными словами, его не интересует абсолютно ничего, кроме полётов на метле: ни заклинания, ни трансфигурация, ни защита от тёмных искусств (хотя тот же Квиррелл, видимо, этот предмет рассказывал вполне сносно). Это, скажет прямо, несколько необычно. В большинстве случаев детей интересует хоть что-то: кого-то привлекают компьютеры, кому-то нравится играть на музыкальном инструменте, кто-то рисует или пытается писать рассказы. А уж ко всяким магическим штукам дети вообще были бы неравнодушны наверняка, особенно если бы выросли в семье магглов.<br><br>Положа руку на сердце, Гарри и Рон &mdash; две бестолочи, которые не хотят делать даже минимально необходимый объём домашнего задания, постоянно списывая у Гермионы. Вместо того, чтобы посоветоваться со старшими и выбрать предметы по душе (можно было бы обратиться хотя бы к декану), они записываются по принципу "хоть что-нибудь". Хотя учителя тоже хороши: могли бы провести для учеников какую-нибудь консультацию по выбору предметов, раз это так важно.
       </p>
     </div>
   </section>
@@ -1001,7 +1001,7 @@
         </span>
       </p>
     </div>
-    <div class="column column-60">т
+    <div class="column column-60">
       <p class="comment">
         Да с чего он этого себе в голову вообще вбил? Чем старосты отличаются от других учеников, кроме непомерного самомнения и значка на груди?
       </p>
