--- a/public/books/dary_smerti/index.html
+++ b/public/books/dary_smerti/index.html
@@ -273,7 +273,7 @@
 
 
 
-<script src="https://harrypot.lol/js/bundle.b5e8dcde9b2d3323c0f9bedbd67f7a2b21c1d891c2bcff0f7c160283e3b9739f.js" integrity="sha256-tejc3pstMyPA&#43;b7b1n96KyHB2JHCvP8PfBYCg&#43;O5c58=" defer></script>
+<script src="https://harrypot.lol/js/bundle.6c9a526a60fd346fbcc33f2cc10b60f3d3732094d3b7c47c97f0be5f04950b12.js" integrity="sha256-bJpSamD9NG&#43;8wz8swQtg89NzIJTTt8R8l/C&#43;XwSVCxI=" defer></script>
 
 <script>
   (function(){
