--- a/public/books/taynaya_komnata/part2/index.html
+++ b/public/books/taynaya_komnata/part2/index.html
@@ -1352,7 +1352,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Зачем нужен этот побег из курятника? Он реально не понимает, что ни с каким чудищем ему не придётся драться, потому что всё равно никто не знает, где оно сидит (о том, что Гарри нашёл вход, Локонс ещё, разумеется, не знает)? Ну, даже если тайная комната и найдётся &mdash; естественно, преподы не будут заставлять Златопуста рисковать жизнью в одиночку. Его просто припугнули, чтобы под ногами не мешался.
+        Зачем нужен этот побег из курятника? Он реально не понимает, что ни с каким чудищем ему не придётся драться, потому что всё равно никто не знает, где оно сидит (о том, что Гарри нашёл вход, Локонс ещё, разумеется, не слышал)? Ну, даже если тайная комната и найдётся &mdash; естественно, преподы не будут заставлять Златопуста рисковать жизнью в одиночку. Его просто припугнули, чтобы под ногами не мешался.
       </p>
     </div>
   </section>
@@ -1410,7 +1410,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Ты не пошёл, ты поехал, причём кукухой. Мальчик, который выжил из ума. Нужно сейчас же нестись в учительскую и орать, что нашёл вход в комнату. Учителя уже смогут связаться с министерством магии. Министр пусть и не гений, но всё-таки и не полный кретин &mdash; он пришлёт отряд мракоборцев и все будут жить долго и счастливо.
+        Ты не пошёл, ты поехал, причём кукухой. Мальчик, который выжил из ума. Нужно сейчас же нестись в учительскую и орать, что нашёл вход в комнату. Учителя уже смогут связаться с министерством магии. Министр пусть и не гений, но всё-таки и не полный кретин &mdash; он пришлёт отряд мракоборцев и все будут жить долго и счастливо. Ну, или хотя бы сами учителя попытаются разрулить ситуацию.
       </p>
     </div>
   </section>
@@ -1508,7 +1508,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Это уже второй раз, когда Поттер просто каким-то невероятным чудом остаётся цел. Как насчёт того, чтобы сказать что-нибудь вроде: "Это был храбрый, но невероятно глупый поступок. Нужно бы оповестить учителей. Впредь думай прежде, чем делать". Кстати, Рон в этот раз вообще ничего не сделал, а получил раза в два больше баллов, чем в прошлой книге, где победил в шахматной партии.
+        Это уже второй раз, когда Поттер просто каким-то невероятным чудом остаётся цел. Как насчёт того, чтобы сказать что-нибудь вроде: "Это был храбрый, но невероятно глупый поступок. Нужно было оповестить учителей. В будущем думай прежде, чем делать". Кстати, Рон в этот раз вообще ничего не сделал, а получил раза в два больше баллов, чем в прошлой книге, где победил в шахматной партии.
       </p>
     </div>
   </section>
@@ -1524,7 +1524,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        А они не хотят подать коллективную жалобу в суд и посадить наконец Малфоя лет на двадцать? Не говорите только, что Малфой так всесилен, что ему уже и все суды подконтрольны.
+        А они не хотят подать коллективную жалобу в суд и посадить наконец Малфоя лет на двадцать? Не говорите только, что Малфой так всесилен, что ему уже и все суды подконтрольны. К примеру, из числа попечителей его выгнали на раз-два.
       </p>
     </div>
   </section>
@@ -1647,6 +1647,19 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-473">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 473</span>
+        Прошлым летом я объяснил твоему отцу, как пользоваться телефоном, он научит тебя. Позвоните мне: два месяца говорить только с Дадли — я этого не вынесу!
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        Мистер Уизли долгие годы по долгу службы взаимодействует с маглами, но при этом даже не знает, как работает телефон. Это по меньшей мере странно, особенно если учитывать, что в школе даже преподают дисциплину "магловедение". По-моему, при приёме на такую должность, как у мистера Уизли, знание не-волшебного мира должно проверяться в первую очередь. Ну, и просто знать как пользоваться телефоном &mdash; это явно недостаточно. Нужно ещё этот телефон иметь и он должен быть подключен к телефонной линии, которой, как я полагаю, в окрестностях дома семьи Уизли нет. Дело происходит всё-таки в конце восьмидесятых, мобильников тогда ещё не было.
+      </p>
+    </div>
+  </section>
 </article>
 <nav class="pagination">
   <a href="https://harrypot.lol/books/taynaya_komnata/part1/">&lt;&lt; Часть 1</a>
@@ -1690,7 +1703,7 @@
 
 
 
-<script src="https://harrypot.lol/js/bundle.b5e8dcde9b2d3323c0f9bedbd67f7a2b21c1d891c2bcff0f7c160283e3b9739f.js" integrity="sha256-tejc3pstMyPA&#43;b7b1n96KyHB2JHCvP8PfBYCg&#43;O5c58=" defer></script>
+<script src="https://harrypot.lol/js/bundle.6c9a526a60fd346fbcc33f2cc10b60f3d3732094d3b7c47c97f0be5f04950b12.js" integrity="sha256-bJpSamD9NG&#43;8wz8swQtg89NzIJTTt8R8l/C&#43;XwSVCxI=" defer></script>
 
 <script>
   (function(){
