--- a/public/books/taynaya_komnata/part2/index.html
+++ b/public/books/taynaya_komnata/part2/index.html
@@ -1145,7 +1145,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Чего? Какая ещё охрана? О ней не было сказано ни слова раньше и не будет сказано ничего в дальнейшем (дементоры &mdash; совсем другая история). Или их специально наняли для поиска чудища из тайной комнаты? Но тогда если они такие супер-бдительные, то чего же у них нет средств для обнаружения невидимок? Вполне логично было бы предположить, что чудище умеет становиться невидимым, так как нападает на учеников втихаря в разных частых школы.
+        Чего? Какая ещё охрана? О ней не было сказано ни слова раньше и не будет сказано ничего в дальнейшем (дементоры &mdash; совсем другая история). Или их специально наняли для поиска чудища из тайной комнаты? Но тогда если они такие супер-бдительные, то чего же у них нет средств для обнаружения невидимок? Вполне логично было бы предположить, что чудище умеет становиться невидимым, так как нападает на учеников втихаря в разных частях школы.
       </p>
     </div>
   </section>
@@ -1426,7 +1426,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        То есть ты всерьёз готов спихнуть человека в дыру, где неизвестно, что находится. Ладно, на свою жизнь тебе насрать, но Локонс, вроде бы, геройствовать не жаждет. А если он там помрёт, тебя потом совесть мучать не будет?
+        То есть ты всерьёз готов спихнуть человека в дыру, где неизвестно что находится. Ладно, на свою жизнь тебе насрать, но Локонс, вроде бы, геройствовать не жаждет. А если он там помрёт, тебя потом совесть мучать не будет?
       </p>
     </div>
   </section>
@@ -1582,7 +1582,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        Хозяин кинул вонючий носок в сторону и совершенно случайно попал в эльфа. Точнее, даже не попал: Добби специально ловил носок. В начале книге нам, вроде как, объяснили, что одежду нужно именно <em>подарить</em>, а не просто кинуть абы куда в приступе ярости. Дарение &mdash; это всё-таки сознательное действие, не говоря уже о том, что этот носок принадлежит Поттеру, а не Малфою.
+        Хозяин кинул вонючий носок в сторону и совершенно случайно попал в эльфа. Точнее, даже не попал: Добби специально ловил носок. В начале книги нам, вроде как, объяснили, что одежду нужно именно <em>подарить</em>, а не просто кинуть абы куда в приступе ярости. Дарение &mdash; это всё-таки сознательное действие, не говоря уже о том, что этот носок принадлежит Поттеру, а не Малфою.
       </p>
     </div>
   </section>
