--- a/public/books/uznik_azkabana/part1/index.html
+++ b/public/books/uznik_azkabana/part1/index.html
@@ -290,7 +290,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        Как-то странно это всё. Она ведь принимала чужое обличье с помощью оборотного зелья, так? Получается, превратившись в какого-нибудь городского жителя, она "сгорала" на костре под чужой личиной, после чего реальный человек как ни в чём не бывало ходил по городу живой и здоровый. Тем более, обвинение в колдовстве &mdash; ведь серьёзная, могли и семью этого человека заодно перетрясти. Неплохую свинью эта Венделина подкидывала невинным людям. Могла бы пойти на какой-нибудь пустырь и там гореть хоть каждый день. А то это получается эксгибиционизм какой-то.
+        Как-то странно это всё. Она ведь принимала чужое обличье с помощью оборотного зелья, так? Получается, превратившись в какого-нибудь городского жителя, она "сгорала" на костре под чужой личиной, после чего реальный человек как ни в чём не бывало ходил по городу живой и здоровый. Тем более, обвинение в колдовстве &mdash; вещь серьёзная, могли и семью этого человека заодно перетрясти. Неплохую свинью эта Венделина подкидывала невинным людям. Могла бы пойти на какой-нибудь пустырь и там гореть хоть каждый день. А то это получается эксгибиционизм какой-то.
       </p>
     </div>
   </section>
@@ -784,6 +784,22 @@
       </p>
     </div>
   </section>
+  <section class="row" id="page-121">
+    <div class="column">
+      <p class="text">
+        <span class="page-num">СТР 121</span>
+        [...] я не смогу научить многому тех, кто не обладает врожденной способностью ясновидения.
+        <span class="explanation">
+          Трелони поясняет, что научатся прорицаниям немногие.
+        </span>
+      </p>
+    </div>
+    <div class="column column-60">
+      <p class="meh">
+        По-моему, таким ученикам нужно настоятельно рекомендовать сменить выбранный предмет, причём как можно скорее: как только выяснится, что у них третий глаз открываться не желает. А то получается, что Гарри и Рон так и будут бестолку просиживать штаны на этих уроках безо всякого результата и мешать другим.
+      </p>
+    </div>
+  </section>
   <section class="row" id="page-122">
     <div class="column">
       <p class="text">
@@ -796,7 +812,7 @@
     </div>
     <div class="column column-60">
       <p class="good">
-        Трелони будут регулярно чмырить, но при этом она довольно часто выдаёт вполне точные пророчества, причём даже как-то мимоходом.
+        Трелони будут регулярно чмырить, но при этом она довольно часто выдаёт вполне точные пророчества, причём даже как-то мимоходом. А ведь предсказания действительно исполнятся: что про покинувшую их Гермиону, что про Дамблдора, который упадёт именно с башни.
       </p>
     </div>
   </section>
