--- a/public/books/uznik_azkabana/part1/index.html
+++ b/public/books/uznik_azkabana/part1/index.html
@@ -586,7 +586,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        И за каким хреном было назначать преподавателем человека, который регулярно превращается в оборотня и, более того, может <b>забыть</b> принять лекарство от ликантропии? Это не какая-то вымышленная опасность, а вполне себе реальная. Ощущение такое, что должность препода защиты от тёмной магии проклята просто потому, что назначают на неё хер знает кого: то всяких непонятных Квирреллов, то вруна Локонса, а теперь вот оборотня Люпина. Вот почему, почему не назначить Снегга, который в самых влажных фантазиях видит себя на этой позиции? Наверняка ему, бывшему тёмному магу, есть, что рассказать ученикам.
+        И за каким хреном было назначать преподавателем человека, который регулярно превращается в оборотня и, более того, может <b>забыть</b> принять лекарство от ликантропии? Это не какая-то вымышленная опасность, а вполне себе реальная. Ощущение такое, что должность препода защиты от тёмной магии проклята просто потому, что назначают на неё хер знает кого: то всяких непонятных Квирреллов, то вруна Локонса, а теперь вот оборотня Люпина. Вот почему, почему не назначить Снегга, который в самых влажных фантазиях видит себя на этой позиции? Наверняка бывшему тёмному магу есть, что рассказать ученикам.
       </p>
     </div>
   </section>
@@ -796,7 +796,7 @@
     </div>
     <div class="column column-60">
       <p class="meh">
-        По-моему, таким ученикам нужно настоятельно рекомендовать сменить выбранный предмет, причём как можно скорее: как только выяснится, что у них третий глаз открываться не желает. А то получается, что Гарри и Рон так и будут бестолку просиживать штаны на этих уроках безо всякого результата и мешать другим.
+        По-моему, таким ученикам нужно настоятельно рекомендовать сменить выбранный предмет, причём как можно скорее: как только выяснится, что у них третий глаз открываться не желает. А то получается, что Гарри с Роном так и будут безрезультатно просиживать штаны на этих уроках и мешать другим.
       </p>
     </div>
   </section>
@@ -921,7 +921,7 @@
     </div>
     <div class="column column-60">
       <p class="bad">
-        А я думаю, что сажать неподготовленного ученика на летучую тварь &mdash; очень плохая идея.
+        А я думаю, что сажать неподготовленного ученика без амуниции и страховки на летучую тварь &mdash; очень плохая идея.
       </p>
     </div>
   </section>
@@ -1319,7 +1319,7 @@
     </div>
     <div class="column column-60">
       <p class="comment">
-        Интересно было бы узнать, что ты сделаешь. Одно и неверное движение &mdash; и здравствуй, Азкабан.
+        Интересно было бы узнать, что ты сделаешь. Одно неверное движение &mdash; и здравствуй, Азкабан.
       </p>
     </div>
   </section>
